# esic-bigdata-iv-blackops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
blackops/core/: decorators.py  exceptions.py  typing.py
blackops/crawlers/wallapop/: config.py  functions.py
blackops/utils/: catalog.py  io.py
notebooks/tema-1-introduccion-black-ops-y-big-data/: enunciados-problemas.ipynb  introduccion-python.ipynb
notebooks/tema-2-etl/: introduccion-spark.ipynb  reto1-etl.ipynb
notebooks/tema-2-etl/data/: wallapop.json
notebooks/tema-3-eda/: EDA.ipynb  Footbal-players-analysis.ipynb  OOP.ipynb  reto2-eda-solucion.ipynb
notebooks/tema-3-eda/data/: football-stats.parquet
notebooks/tema-4-ml-training/: association-rules.ipynb  data-drift-classification.ipynb  k-means-exercise.ipynb  reto3-loan-classification.ipynb
notebooks/tema-4-ml-training/data/: dim_product.csv  kmeans-data.csv  kmeans-exercice.csv  store-transactions.csv
