[tool.poetry]
name = "blackops"
version = "0.1.0"
description = "A package for BlackOps utilities"
authors = ["Daniel Diego Horcajuelo <daniel.diego@esic.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyspark = {extras = ["sql"], version = "^3.5.2"}
requests = "^2.32.3"
delta-spark = "^3.2.1"
psutil = "^6.0.0"
delta-sharing = "^1.2.0"
seaborn = "^0.13.2"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
numba = "^0.60.0"
pydantic = "^2.9.2"
mlxtend = "^0.23.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"
ipykernel = "^6.29.5"
pytest = "^8.3.3"
pre-commit = "^3.8.0"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
